cmake_minimum_required(VERSION 3.12)
project(pingpong LANGUAGES CXX)

option(USE_ROCM "Use Rocm" OFF)
option(USE_CALIPER "Use Caliper" OFF)

add_executable(pingpong pingpong.cpp)

if (USE_CALIPER)
    add_definitions(-DUSE_CALIPER)  
    find_package(caliper)
    find_package(adiak REQUIRED)
    include_directories(${caliper_INCLUDE_DIR})
    include_directories(${adiak_INCLUDE_DIRS})
    message(STATUS "Caliper on")

    target_link_libraries(pingpong PRIVATE caliper)
    target_link_libraries(pingpong PRIVATE adiak::adiak)
endif()

if (USE_ROCM)
    find_package(hip CONFIG REQUIRED)
    add_definitions(-D__HIP_PLATFORM_AMD__)        
    target_compile_definitions(pingpong PRIVATE USE_ROCM)
    target_link_libraries(pingpong PRIVATE hip::amdhip64)
    message(STATUS "Rocm on")
else()
    find_package(MPI REQUIRED)
    include_directories(${MPI_INCLUDE_PATH})
    target_link_libraries(pingpong PRIVATE ${MPI_CXX_LIBRARIES})
endif()
